--- a/netlify.toml
+++ b/netlify.toml
@@ -1,12 +1,19 @@
-[build]
+[
+build
+]
   command = "pip install -r requirements.txt"
   functions = "netlify/functions"
+  publish = "/"
 
-[functions]
-  node_bundler = "esbuild"
-  external_node_modules = ["numpy", "pandas", "networkx", "scikit-learn", "joblib"]
+[
+functions
+]
+  directory = "netlify/functions"
+  included_files = ["model_prod.pkl"]
 
-[[redirects]]
+[[
+redirects
+]]
   from = "/api/*"
   to = "/.netlify/functions/:splat"
   status = 200
