--- a/netlify.toml
+++ b/netlify.toml
@@ -1,19 +1,13 @@
-[
-build
-]
+[build]
   command = "pip install -r requirements.txt"
   functions = "netlify/functions"
   publish = "/"
 
-[
-functions
-]
+[functions]
   directory = "netlify/functions"
   included_files = ["model_prod.pkl"]
 
-[[
-redirects
-]]
+[[redirects]]
   from = "/api/*"
   to = "/.netlify/functions/:splat"
   status = 200
