--- a/netlify.toml
+++ b/netlify.toml
@@ -1,13 +1,16 @@
 [build]
-  command = "pip install -r requirements.txt"
-  functions = "netlify/functions"
-  publish = "/"
+  publish = "public"  # This directory will contain any static assets
+  command = ""  # No build command needed for pure functions
 
 [functions]
   directory = "netlify/functions"
-  included_files = ["model_prod.pkl"]
+  node_bundler = "esbuild"
+  external_node_modules = ["numpy", "pandas", "networkx", "scikit-learn", "joblib"]
 
 [[redirects]]
   from = "/api/*"
   to = "/.netlify/functions/:splat"
   status = 200
+
+[build.environment]
+  PYTHON_VERSION = "3.9"
