--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,7 @@
 [build]
   command = """
-    chmod +x netlify/functions/recommend/recommend.py && \
+    curl -L https://raw.githubusercontent.com/netlify/build-image/focal/packages/python.sh | sh && \
+    export PATH="/opt/buildhome/.python/bin:$PATH" && \
     pip install -r netlify/functions/recommend/requirements.txt -t netlify/functions/recommend/
   """
   publish = "."
@@ -8,6 +9,7 @@
 [functions]
   directory = "netlify/functions"
   node_bundler = "esbuild"
+  external_node_modules = ["python-shell"]
 
 [[redirects]]
   from = "/api/*"
