--- a/netlify.toml
+++ b/netlify.toml
@@ -1,11 +1,13 @@
 [build]
-  command = "pip install -r netlify/functions/recommend/requirements.txt -t netlify/functions/recommend/"
+  command = """
+    cd netlify/functions/recommend && npm install && \
+    pip install -r requirements.txt -t .
+  """
   publish = "."
 
 [functions]
   directory = "netlify/functions"
   node_bundler = "esbuild"
-  external_node_modules = ["python-shell"]
 
 [[redirects]]
   from = "/api/*"
@@ -14,3 +16,4 @@
 
 [build.environment]
   PYTHON_VERSION = "3.9"
+  NODE_VERSION = "16"
