--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,8 @@
+# netlify.toml
 [build]
   command = """
     cd netlify/functions/recommend && 
+    pip install --upgrade pip &&
     pip install -r requirements.txt -t . &&
     rm -rf *.dist-info __pycache__
   """
@@ -17,3 +19,5 @@
 
 [build.environment]
   PYTHON_VERSION = "3.9"
+  AWS_LAMBDA_JS_RUNTIME = "nodejs16.x"
+
