--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
-numpy==1.24.3
-pandas==2.0.2
-networkx==3.1
-scikit-learn==1.2.2
-joblib==1.2.0
+numpy==1.21.6
+scikit-learn==1.0.2
+joblib==1.1.1
+requests==2.28.1
